Correct styles for better color contrast and readability

--- a/css/style.css
+++ b/css/style.css
@@ -193,7 +193,7 @@
 }
 
 .menu__link:hover {
-  color: #9d88b8;
+  color: black;
 }
 
 .menu__link:hover::before {
@@ -247,7 +247,7 @@
 }
 
 .hamburger:hover .hamburger__bar {
-  background-color: #9d88b8;
+  background-color: black;
 }
 
 .hero {
@@ -288,7 +288,7 @@
 .hero__subheading {
   font-size: 1.5em;
   font-weight: 400;
-  color: #8662b4;
+  color: #9d88b8;
   text-shadow: 0 0 15px black;
   animation: fadeInUp 2s;
 }
@@ -486,7 +486,7 @@
 .gallery__image::after {
   content: "";
   display: block;
-  background-color: rgba(250, 250, 250, 0.5);
+  background-color: rgba(250, 250, 250, 0.7);
   width: calc(100% - 20px);
   height: calc(100% - 20px);
   position: absolute;
@@ -518,7 +518,7 @@
 }
 
 .gallery__description {
-  font-size: 12px;
+  font-size: 16px;
 }
 
 .gallery__icon {
