--- a/sass/sections/_works.scss
+++ b/sass/sections/_works.scss
@@ -101,7 +101,7 @@
         &::after {
             content: "";
             display: block;
-            background-color: rgba(250, 250, 250, .5);
+            background-color: rgba(250, 250, 250, .7);
             width: calc(100% - 20px);
             height: calc(100% - 20px);
             position: absolute;
@@ -133,7 +133,7 @@
     }
 
     &__description {
-        font-size: 12px;
+        font-size: 16px;
     }
 
     &__icon {
